@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Template</title>
+  <title>Add Fetish Tags</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,13 +23,25 @@
 
 
 <body>
-  <h1>Template</h1>
+  <h1>Add Fetish Tags</h1>
 
   <hr>
 
   <div class="container">
-    <p>Adds a fetish to the list of fetishes this <a href="qrc:/resources/help/project/joi_project_help.html">JOI-Project</a>
-    will be tagged with.</p>
+    <p>Opens the kink / fetish selection overlay to set the fetish / kink tags of this
+    <a href="qrc:/resources/help/project/joi_project_help.html">JOI-Project</a>.</p>
+
+    <br>
+
+    <p><img src="qrc:/resources/help/editor/images/kink_overlay.png"><br><i>Kink / Fetish selection overlay</i></p>
+
+    <br>
+
+    <p>The kinks / fetishes are categorized are can be searched with the
+    <a href="qrc:/resources/help/editor/resources/filter_widget_help.html">Filter</a> by entering a regex expression.
+    Any number of kinks / fetishes can be selected. Clicking <b>Confirm</b>,
+    will apply the selection to the project, while clicking <b>Cancel</b>
+    will discard the selection.</p>
   </div>
 </body>
 
