@@ -1,0 +1,42 @@
+<!doctype html>
+<html class="no-js" lang="">
+
+<head>
+  <meta charset="utf-8">
+  <title>Project Describtion</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <style>
+    h1 {
+      text-align: center;
+    }
+    div.container {
+      min-height: 10em;
+      display: table-cell;
+      margin-left: auto;
+      margin-right: auto;
+      width: 0.6em
+    }
+  </style>
+</head>
+
+
+<body>
+  <h1>Project Describtion</h1>
+
+  <hr>
+
+  <div class="container">
+    <p>This text editor lets you edit the <a href="qrc:/resources/help/project/joi_project_help.html">JOI-Project</a>
+    describtion. The describtion can contain html tags for formating and is visible to users in the
+    project selection.</p>
+
+    <br>
+
+    <p>Not all html tags are supported, to see an overview of supported tags, please see:<br>
+    <i>https://doc-snapshots.qt.io/qt5-5.9/richtext-html-subset.html</i></p>
+  </div>
+</body>
+
+</html>
