@@ -23,12 +23,18 @@
 
 
 <body>
-  <h1>Template</h1>
+  <h1>Target Engine Version</h1>
 
   <hr>
 
   <div class="container">
-    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+    <p>Shows the JOIP-Engine version this <a href="qrc:/resources/help/project/joi_project_help.html">JOI-Project</a>
+    was last saved in. If the engine version doesn't match the curent version, a warning will be shown.
+    If the <a href="qrc:/resources/help/project/joi_project_help.html">JOI-Project</a> was saved in an
+    earlier version, it should not have any impact to <i>upgrade</i> it, as the engine is backwards compatible.
+    If you save a <a href="qrc:/resources/help/project/joi_project_help.html">JOI-Project</a> created in a
+    later engine version, some features will be lost and might not be recoverable after saving.
+    </p>
   </div>
 </body>
 
