@@ -23,12 +23,15 @@
 
 
 <body>
-  <h1>Template</h1>
+  <h1>Fetish Tree</h1>
 
   <hr>
 
   <div class="container">
-    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+    <p>Shows the set of kinks / fetishes, this <a href="qrc:/resources/help/project/joi_project_help.html">JOI-Project</a>
+    was tagged with.<br>To add kinks / fetishes, click the <a href="qrc:/resources/help/editor/addfetish_button_help.html">Add Fetish Tags</a>
+    button.<br>To remove kinks / fetishes, select them and click the <a href="qrc:/resources/help/editor/removefetish_button_help.html">Remove Fetish Tags</a>
+    button</p>
   </div>
 </body>
 
