@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Template</title>
+  <title>Project Version</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,12 +23,15 @@
 
 
 <body>
-  <h1>Template</h1>
+  <h1>Project Version</h1>
 
   <hr>
 
   <div class="container">
-    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+    <p>Shows and sets this <a href="qrc:/resources/help/project/joi_project_help.html">JOI-Project</a>
+    version. This version is not used for anything internally, but is visible to users in the
+    project selection. It can be used, to keep track of different versions of a released
+    <a href="qrc:/resources/help/project/joi_project_help.html">JOI-Project</a>.</p>
   </div>
 </body>
 
